testData/annotator/MainComponent/MainComponentTestData.secarc
component <error descr="Main component has either access control or access roles">A</error> {

}